# wiki

./: .gitignore  Makefile  _config.yml  pyproject.toml
_build/doctrees/: environment.pickle  index.doctree
_build/doctrees/about/: index.doctree
_build/html/: .buildinfo  genindex-all.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/_static/: pygments.css
_build/singlehtml/: .buildinfo  index.html  objects.inv
_build/singlehtml/_static/: documentation_options.js
docs/source/: conf.py  index.rst
docs/source/about/: index.rst
