[project]
name = "docs-template"
version = "0.1.0"
description = "Docs template for HydroRoll Team"
authors = [
    {name = "简律纯",email = "i@jyunko.cn"},
]
dependencies = [
    "furo>=2025.7.19",
    "myst-parser>=4.0.1",
    "requests>=2.31.0",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-design>=0.6.1",
    "sphinx-intl>=2.3.1",
    "tomli>=2.2.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
docs = [
    "furo>=2024.7.18",
    "sphinx-autobuild>=2024.4.16",
    "myst-parser>=3.0.1",
    "sphinx>=7.4.7",
    "tomli>=2.0.1",
    "sphinx-intl>=2.2.0",
    "sphinx-design>=0.6.0",
]
